--- a/assets/resources/styles/less/core/_fonts.less
+++ b/assets/resources/styles/less/core/_fonts.less
@@ -170,10 +170,11 @@
 }
 
 
-// @font-face {
-//     font-family: 'Ageo';
-//     src: url('/fonts/Ageo.woff');
-// }
+@font-face {
+    font-family: 'Ageo-SemiBold';
+    src: url('/fonts/Ageo-SemiBold.woff');
+}
+
 // @font-face {
 //     font-family: 'Ageo';
 //     src: url('/fonts/Ageo.woff');
