--- a/assets/resources/styles/less/modules/_blog.less
+++ b/assets/resources/styles/less/modules/_blog.less
@@ -432,9 +432,77 @@
     margin-top: 9%;
 }
 
+.recent-post {
+    margin-top: 17%;
+    margin-bottom: 8%;
+    padding: 0 3%;
+
+    .pr-list {
+        display: -ms-flexbox;
+        display: -webkit-box;
+        display: flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        max-width:
+            1600px;
+        margin: 0 auto;
+        z-index: 0;
+    }
+
+    .bl-main {
+        position: relative;
+        width: 58%;
+        padding: 0 0 60px;
+        overflow: hidden;
+    }
+
+    .pr-thum a {
+        position: relative;
+        display: block;
+        overflow: hidden;
+        width: 100%;
+        padding:
+            1px;
+        z-index: 3;
+    }
+
+    .p-prj-caption {
+        width: 40%;
+        padding-left:
+            17px;
+        pointer-events: none;
+        -webkit-transform: translateZ(100px);
+        transform: translateZ(100px);
+        z-index: 4;
+        margin-top:
+            30px;
+    }
+
+    .p-prj-caption-name {
+        font-size: 35px;
+        letter-spacing: 2.5px;
+        font-family: 'NeueHaasDisplay-me';
+        color: #000;
+        line-height: 1.2;
+        margin-bottom: 1%;
+    }
+
+    .p-prj-caption-credit {
+        font-size: 15px;
+        letter-spacing: 2px;
+        line-height: 19px;
+        color: #737373;
+        margin-top: 0;
+        font-family: 'NeueHaasDisplay-me';
+    }
+}
+
 @media screen and (max-width:1280px) {
     #blogs-sction {
-        padding: 0px 10%;
+        padding: 0px 3%;
     }
 
     .blog-details .container .content h1 {
