--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -319,7 +319,7 @@
     line-height: 1.2;
     font-family: 'NeueHaasDisplay-me';
     letter-spacing: 3px;
-    opacity: 0;
+    // opacity: 0;
   }
 
   .flex-con .gif-area {
@@ -345,7 +345,7 @@
     // transform: scale(0);
     transition: transform 1s ease-in-out;
     pointer-events: none;
-    opacity: 0;
+    // opacity: 0;
   }
 
   .visible-image {
@@ -458,12 +458,11 @@
 
       p {
         margin-bottom: 21%;
-        font-size: 1.1em;
+        font-size: 0.9em;
         line-height: 1.8;
         letter-spacing: 1px;
-        font-family: 'NeueHaasDisplay-light';
+        font-family: 'NeueHaasDisplay-me';
         text-transform: inherit;
-
       }
     }
 
@@ -472,11 +471,10 @@
 
       p {
         margin-bottom: 21%;
-        font-size: 1.1em;
-        line-height: 1.8;
+        font-size: 0.9em;
+        line-height: 2.2;
         letter-spacing: 1px;
-        font-family: 'NeueHaasDisplay-light';
-        text-transform: inherit;
+        font-family: 'Ageo';
       }
 
     }
@@ -563,6 +561,197 @@
   }
 }
 
+// 
+// section.horizontal {
+//   overflow-x: hidden;
+// }
+.scroll-sec {
+  background: linear-gradient(1deg, #090e26, #031554);
+  padding: 10% 0;
+  position: relative;
+  padding-bottom: 0;
+
+  .container {
+    width: 80%;
+
+    h2 {
+      padding:
+        20px 0%;
+      font-size: 1.9em;
+      padding-right:
+        160px;
+      color: #fff;
+      line-height: 1.7;
+      margin-bottom: 3%;
+      letter-spacing: 4px;
+      font-family: 'NeueHaasDisplay-me';
+    }
+
+    p {
+      font-size: 1.3em;
+      font-family: 'Ageo';
+      color: #fff;
+      line-height: 1.8;
+      letter-spacing: 2px
+    }
+  }
+
+  .top-bg {
+    position: absolute;
+    top: -177px;
+    width: 79%;
+    left: 280px;
+  }
+
+  .bottom-bg {
+    position: absolute;
+    bottom: 230px;
+    transform: rotate(271deg);
+    width: 74%;
+    right: -370px;
+  }
+
+}
+
+.sec-b {
+  background: #090e26;
+  padding: 10% 0;
+  padding-top: 0;
+  position: relative;
+  border: 1px solid #090e26;
+
+  .container {
+    width: 80%;
+
+    p {
+      font-size: 1.3em;
+      font-family: 'Ageo';
+      color: #fff;
+      line-height: 1.8;
+      letter-spacing: 2px
+    }
+  }
+}
+
+section.horizontal .pin-wraps,
+section.horizontal .animation-wrap {
+  display: flex;
+  position: relative;
+  z-index: 1;
+  height: 60vh;
+  margin-top: 50px;
+  margin-left: 9%;
+}
+
+
+.pin-wrap .item {
+  position: relative;
+  padding: 70px 90px;
+  flex: 0 0 500px;
+  align-items: center;
+  line-height: 1.7;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border-right: 1px solid rgba(0, 0, 0, 0.06);
+  background-color: transparent;
+
+  h4 {
+    font-size: 1.9em;
+    text-transform: uppercase;
+    font-family: 'NeueHaasDisplay-me';
+    color: #fff;
+    letter-spacing: 2.4px;
+  }
+
+  p {
+    line-height: 1.4;
+    color: #fff;
+    letter-spacing: 1px;
+    margin-top: 9px;
+
+  }
+}
+
+
+.pin-wrap .item:before {
+  font-family: 'NeueHaasDisplay-me';
+  position: absolute;
+  font-size: 10em;
+  opacity: 0.13;
+  z-index: -1;
+  transform: translate(-38px,
+      -83px);
+  line-height: 1;
+  color: #fff;
+}
+
+.black-bg {
+  position: relative;
+
+  img {
+    position: absolute;
+  }
+}
+
+
+section.horizontal .animation-wrap.to-right {
+  counter-reset: item;
+  float: left;
+}
+
+section.horizontal .animation-wrap.to-left {
+  counter-reset: item 11;
+  float: right;
+}
+
+.pin-wrap .item:before {
+  // counter-increment: item;
+  content: attr(data-text);
+}
+
+// .pin-wrap .item:before {
+//   counter-increment: item -1;
+//   content: counter(item);
+// }
+
+
+
+.pin-wrap .item:nth-child(2n+2) {
+  align-items: flex-start;
+}
+
+.pin-wrap .item:nth-child(4n+4) {
+  align-items: flex-end;
+}
+
+
+// section
+.pin-wraps {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 50px 10vw;
+  position: relative;
+}
+
+.pin-wraps>* {
+  min-width: 42vw;
+  padding: 0vw;
+  position: relative;
+}
+
+
+
+
 @media screen and (max-width:1680px) {
   .services-s .image {
     width: 46%;
@@ -575,7 +764,7 @@
 
   .services-s .flex-con .fle h3 {
     font-size: 4em;
-    opacity: 0;
+    // opacity: 0;
   }
 }
 
@@ -608,7 +797,7 @@
 
     .en-form-submit {
       margin: 0 0 0;
-      /* overflow: hidden; */
+      overflow: hidden;
       /* height: 100%; */
       text-align: left;
       margin-bottom: 20%;
@@ -619,6 +808,7 @@
         background: 0 0;
         border: 0;
         border-radius: 0;
+        // opacity: 0;
         outline: 0 !important;
         font-family: 'Ageo';
         font-size: 1em;
@@ -634,7 +824,7 @@
 
   .services-s .flex-con .fle h3 {
     font-size: 3em;
-    opacity: 0;
+    // opacity: 0;
   }
 }
 
@@ -688,14 +878,16 @@
           width: 34%;
 
           h6 {
-            font-size: 9em;
-            font-family: 'NeueHaasDisplay-me';
-            color: #ffffff52;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            position: relative;
+            .numb {
+              font-size: 9em;
+              font-family: 'NeueHaasDisplay-me';
+              color: #ffffff52;
+              letter-spacing: 1px;
+              text-transform: uppercase;
+              position: relative;
+            }
 
-            span {
+            .cons {
               font-size: 18px;
               position: absolute;
               left: 10px;
@@ -801,5 +993,22 @@
     .accordion-container {
       margin: 0px 0px;
     }
+  }
+}
+
+
+// strategy Page
+.wid {
+  width: 88%;
+}
+
+.b-h1 {
+  .in-t {
+    font-size: 0.6em;
+    line-height: 1.73;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    margin-bottom: 0px;
+    font-family: 'NeueHaasDisplay-me';
   }
 }
