--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -8044,11 +8044,21 @@ header {
           justify-content: flex-end !important;
 }
 .ser-hero {
-  margin-top: 20%;
+  margin-top: 0;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
 }
 .ser-hero .top-h {
   position: relative;
   margin-right: 0%;
+  padding: 0px 30px;
+  width: 100%;
 }
 .ser-hero .top-h h1 {
   font-size: 10em;
@@ -8060,7 +8070,7 @@ header {
 }
 .ser-hero .top-h .h1-r {
   margin-left: 30%;
-  margin-top: 50px;
+  margin-top: 14px;
 }
 .ser-hero .top-h .element {
   position: absolute;
@@ -8087,11 +8097,10 @@ header {
   padding: 8% 12%;
 }
 .bol-prh p {
-  font-size: 3.2em;
-  font-family: 'NeueHaasDisplay-xthin';
-  font-weight: 600;
+  font-size: 2.6em;
+  font-family: 'NeueHaasDisplay-roman';
   letter-spacing: 3px;
-  margin-right: 10%;
+  text-align: center;
 }
 .bol-prh p span {
   font-family: 'NeueHaasDisplay-xthin';
@@ -8116,33 +8125,41 @@ header {
     background-position: 200% center;
   }
 }
+.ser-c {
+  -webkit-user-select: auto;
+     -moz-user-select: auto;
+      -ms-user-select: auto;
+          user-select: auto;
+  background: #fafafa;
+  padding: 7% 0px;
+}
 .ser-c .container {
   width: 80%;
 }
 .ser-c .flex-con {
   margin-top: 0px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
 .ser-c .flex-con .left-d {
-  width: 31%;
+  width: 32%;
 }
 .ser-c .flex-con .left-d p {
-  margin-bottom: 21%;
   font-size: 0.9em;
   line-height: 1.8;
   letter-spacing: 1px;
   font-family: 'NeueHaasDisplay-me';
   text-transform: inherit;
+  text-align: justify;
 }
 .ser-c .flex-con .right {
-  width: 45%;
+  width: 48%;
+  padding-left: 4%;
 }
 .ser-c .flex-con .right p {
-  margin-bottom: 21%;
   font-size: 0.9em;
   line-height: 2.2;
   letter-spacing: 1px;
@@ -8183,6 +8200,187 @@ header {
   font-size: 19px;
   font-weight: 600;
 }
+.get-in {
+  padding: 15% 0;
+}
+.get-in .flex-con {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.get-in .flex-con .left-d {
+  width: 43%;
+}
+.get-in .flex-con .left-d h2 {
+  font-size: 1.9em;
+  line-height: 1.4;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
+  font-family: 'NeueHaasDisplay-me';
+}
+.get-in .flex-con .left-d p {
+  font-size: 0.9em;
+  line-height: 1.8;
+  letter-spacing: 1px;
+  font-family: 'Ageo';
+  text-transform: inherit;
+}
+.get-in .flex-con .right {
+  text-align: center;
+  position: relative;
+}
+.get-in .flex-con .right a {
+  font-size: 1.2em;
+  font-family: 'NeueHaasDisplay-me';
+  color: #2b2b2b;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.get-in .flex-con .right a img {
+  width: 10px;
+}
+.get-in .flex-con .right::after {
+  content: '';
+  background: url(/assets/resources/img/Service-elements/phone-icon.svg);
+  width: 50%;
+  height: 231px;
+  position: absolute;
+  background-repeat: no-repeat;
+  left: 0;
+  margin: 0 auto;
+  right: 0;
+  top: -100px;
+  background-size: cover;
+}
+.last {
+  padding: 0% 12%;
+}
+.last .gr-b {
+  font-size: 1.6em;
+  font-family: 'NeueHaasDisplay-me';
+  letter-spacing: 3px;
+  text-align: left;
+  color: #2B2B2B;
+}
+.last .gr-b span {
+  font-family: 'NeueHaasDisplay-me';
+  font-size: 1.2em;
+  color: #fff;
+  background-color: #f3ec78;
+  background-image: linear-gradient(45deg, dodgerblue, purple, red, dodgerblue);
+  background-size: 200% 200%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: shine 4s linear infinite;
+  animation: shine 4s linear infinite;
+}
+.service-points {
+  padding: 10% 0;
+}
+.service-points .container {
+  width: 80%;
+}
+.service-points .container h2 {
+  font-size: 1.9em;
+  line-height: 1.4;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
+  font-family: 'NeueHaasDisplay-me';
+}
+.service-points .container .point {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.service-points .container .point li {
+  width: 40%;
+  font-size: 1em;
+  font-family: 'Ageo';
+  color: #444444;
+  line-height: 2.9;
+  padding-left: 20px;
+  position: relative;
+}
+.service-points .container .point li::before {
+  content: '';
+  background-image: url(/assets/resources/img/Service-elements/bullet-icon.svg);
+  width: 15px;
+  height: 14px;
+  top: 15px;
+  left: 0;
+  background-size: cover;
+  position: absolute;
+}
+.strategy {
+  position: relative;
+}
+.strategy .el-bg {
+  background-image: url(/assets/resources/img/Service-elements/strategy-icon.png);
+  position: absolute;
+  z-index: 4;
+  background-repeat: no-repeat;
+}
+.strategy .el1 {
+  width: 50px;
+  height: 50px;
+  background-position: -22px;
+  top: 18%;
+  left: 7%;
+  -webkit-transform: scale(0.6);
+          transform: scale(0.6);
+}
+.strategy .el2 {
+  width: 50px;
+  height: 50px;
+  background-position: -337px;
+  left: 16%;
+  bottom: 30%;
+  top: unset;
+  -webkit-transform: scale(0.5);
+          transform: scale(0.5);
+}
+.strategy .el3 {
+  width: 50px;
+  height: 50px;
+  background-position: -255px;
+  left: 34%;
+  -webkit-transform: scale(0.5);
+          transform: scale(0.5);
+  bottom: 7%;
+  top: 21%;
+}
+.strategy .el4 {
+  width: 50px;
+  height: 50px;
+  background-position: -643px;
+  top: 18%;
+  -webkit-transform: scale(0.5);
+          transform: scale(0.5);
+  right: 11%;
+}
+.strategy .el5 {
+  width: 50px;
+  height: 50px;
+  background-position: -418px;
+  bottom: 23%;
+  right: 2%;
+  -webkit-transform: scale(0.7);
+          transform: scale(0.7);
+}
+.strategy .el6 {
+  width: 90px;
+  height: 93px;
+  background-position: -160px;
+  bottom: 13%;
+  right: 25%;
+}
 .image-sec {
   margin-bottom: 10%;
 }
@@ -8218,6 +8416,94 @@ header {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
+}
+.scroll-sec2 {
+  padding: 10% 0;
+  position: relative;
+  padding-bottom: 0;
+}
+.scroll-sec2 .back-text {
+  position: absolute;
+  z-index: 1;
+  top: 74px;
+  right: 0;
+  font-family: 'NeueHaasDisplay-bold';
+  z-index: -1;
+}
+.scroll-sec2 .back-text h1 {
+  font-size: 7.1em;
+  color: #fafafa;
+}
+.scroll-sec2 .container {
+  width: 80%;
+}
+.scroll-sec2 .container h2 {
+  padding: 20px 0%;
+  font-size: 1.9em;
+  padding-right: 31%;
+  color: #000000;
+  line-height: 1.5;
+  margin-bottom: 3%;
+  letter-spacing: 4px;
+  font-family: 'NeueHaasDisplay-me';
+}
+.scroll-sec2 .container p {
+  font-size: 1.3em;
+  font-family: 'Ageo';
+  color: #000000;
+  line-height: 1.8;
+  letter-spacing: 2px;
+}
+.scroll-sec2 .container .bo-h {
+  padding: 20px 0%;
+  font-size: 27px;
+  padding-right: 11%;
+  color: #000000;
+  line-height: 1.8;
+  margin-bottom: 3%;
+  margin-top: 10%;
+  letter-spacing: 4px;
+  font-family: 'NeueHaasDisplay-me';
+  position: relative;
+}
+.scroll-sec2 .container .bo-h img {
+  position: absolute;
+  width: 70px;
+  top: 0;
+  right: 0;
+  -webkit-animation: rotation 17s infinite linear;
+}
+.scroll-sec2 .pin-wrap {
+  height: 70vh;
+}
+.details-f {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  overflow: visible !important;
+}
+.details-f .cont {
+  width: 46%;
+  padding-right: 4.6%;
+}
+.details-f .cont p {
+  font-size: 0.9em;
+  font-family: 'Ageo';
+  color: #000000;
+  line-height: 1.8;
+  letter-spacing: 2px;
+}
+.image-div {
+  width: 70%;
+  position: relative;
+  margin-top: -18%;
+  margin-left: 36%;
+  margin-bottom: 23%;
 }
 .scroll-sec {
   background: linear-gradient(1deg, #090e26, #031554);
@@ -8301,19 +8587,18 @@ section.horizontal .animation-wrap {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  border-right: 1px solid rgba(0, 0, 0, 0.06);
   background-color: transparent;
 }
 .pin-wrap .item h4 {
-  font-size: 1.9em;
+  font-size: 2em;
   text-transform: uppercase;
   font-family: 'NeueHaasDisplay-me';
-  color: #fff;
-  letter-spacing: 2.4px;
+  color: #000000;
+  letter-spacing: 3.6px;
 }
 .pin-wrap .item p {
   line-height: 1.4;
-  color: #fff;
+  color: #000000;
   letter-spacing: 1px;
   margin-top: 9px;
 }
@@ -8321,12 +8606,12 @@ section.horizontal .animation-wrap {
   font-family: 'NeueHaasDisplay-me';
   position: absolute;
   font-size: 10em;
-  opacity: 0.13;
+  opacity: 0.11;
   z-index: -1;
-  -webkit-transform: translate(-38px, -83px);
-          transform: translate(-38px, -83px);
+  -webkit-transform: translate(-60px, -102px);
+          transform: translate(-60px, -102px);
   line-height: 1;
-  color: #fff;
+  color: #000000;
 }
 .black-bg {
   position: relative;
