--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -273,7 +273,6 @@
 }
 
 
-
 /* services */
 .services-s {
   padding: 0px 10%;
@@ -366,11 +365,17 @@
 
 // details
 .ser-hero {
-  margin-top: 20%;
+  margin-top: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  width: 100%;
 
   .top-h {
     position: relative;
     margin-right: 0%;
+    padding: 0px 30px;
+    width: 100%;
 
     h1 {
       font-size: 10em;
@@ -386,7 +391,7 @@
 
     .h1-r {
       margin-left: 30%;
-      margin-top: 50px;
+      margin-top: 14px;
     }
 
     .element {
@@ -416,11 +421,10 @@
   padding: 8% 12%;
 
   p {
-    font-size: 3.2em;
-    font-family: 'NeueHaasDisplay-xthin';
-    font-weight: 600;
+    font-size: 2.6em;
+    font-family: 'NeueHaasDisplay-roman';
     letter-spacing: 3px;
-    margin-right: 10%;
+    text-align: center;
 
     span {
       font-family: 'NeueHaasDisplay-xthin';
@@ -444,33 +448,38 @@
 }
 
 .ser-c {
+  user-select: auto;
+  background: #fafafa;
+  padding: 7% 0px;
+
   .container {
     width: 80%;
   }
 
   .flex-con {
     margin-top: 0px;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 
     .left-d {
-      width: 31%;
+      width: 32%;
+
 
       p {
-        margin-bottom: 21%;
         font-size: 0.9em;
         line-height: 1.8;
         letter-spacing: 1px;
         font-family: 'NeueHaasDisplay-me';
         text-transform: inherit;
+        text-align: justify;
       }
     }
 
     .right {
-      width: 45%;
+      width: 48%;
+      padding-left: 4%;
 
       p {
-        margin-bottom: 21%;
         font-size: 0.9em;
         line-height: 2.2;
         letter-spacing: 1px;
@@ -522,6 +531,204 @@
 
 }
 
+.get-in {
+  padding: 15% 0;
+
+  .flex-con {
+    align-items: center;
+
+    .left-d {
+      width: 43%;
+
+      h2 {
+        font-size: 1.9em;
+        line-height: 1.4;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        margin-bottom: 20px;
+        font-family: 'NeueHaasDisplay-me';
+      }
+
+      p {
+        font-size: 0.9em;
+        line-height: 1.8;
+        letter-spacing: 1px;
+        font-family: 'Ageo';
+        text-transform: inherit;
+      }
+    }
+
+    .right {
+      text-align: center;
+      position: relative;
+
+      a {
+        font-size: 1.2em;
+        font-family: 'NeueHaasDisplay-me';
+        color: #2b2b2b;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+
+        img {
+          width: 10px;
+        }
+      }
+
+      &::after {
+        content: '';
+        background: url(/assets/resources/img/Service-elements/phone-icon.svg);
+        width: 50%;
+        height: 231px;
+        position: absolute;
+        background-repeat: no-repeat;
+        left: 0;
+        margin: 0 auto;
+        right: 0;
+        top: -100px;
+        background-size: cover;
+      }
+    }
+  }
+}
+
+.last {
+  padding: 0% 12%;
+
+  .gr-b {
+    font-size: 1.6em;
+    font-family: 'NeueHaasDisplay-me';
+    letter-spacing: 3px;
+    text-align: left;
+    color: #2B2B2B;
+
+    span {
+      font-family: 'NeueHaasDisplay-me';
+      font-size: 1.2em;
+      color: #fff;
+      background-color: #f3ec78;
+      background-image: linear-gradient(45deg, dodgerblue, purple, red, dodgerblue);
+      background-size: 200% 200%;
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      -webkit-animation: shine 4s linear infinite;
+      animation: shine 4s linear infinite;
+    }
+  }
+}
+
+
+.service-points {
+  padding: 10% 0;
+
+  .container {
+    width: 80%;
+
+    h2 {
+      font-size: 1.9em;
+      line-height: 1.4;
+      letter-spacing: 2px;
+      margin-bottom: 20px;
+      font-family: 'NeueHaasDisplay-me';
+    }
+
+    .point {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+
+      li {
+        width: 40%;
+        font-size: 1em;
+        font-family: 'Ageo';
+        color: #444444;
+        line-height: 2.9;
+        padding-left: 20px;
+        position: relative;
+
+        &::before {
+          content: '';
+          background-image: url(/assets/resources/img/Service-elements/bullet-icon.svg);
+          width: 15px;
+          height: 14px;
+          top: 15px;
+          left: 0;
+          background-size: cover;
+          position: absolute;
+        }
+      }
+    }
+  }
+}
+
+//
+
+.strategy {
+  position: relative;
+
+  .el-bg {
+    background-image: url(/assets/resources/img/Service-elements/strategy-icon.png);
+    position: absolute;
+    z-index: 4;
+    background-repeat: no-repeat;
+  }
+
+  .el1 {
+    width: 50px;
+    height: 50px;
+    background-position: -22px;
+    top: 18%;
+    left: 7%;
+    transform: scale(0.6);
+  }
+
+  .el2 {
+    width: 50px;
+    height: 50px;
+    background-position: -337px;
+    left: 16%;
+    bottom: 30%;
+    top: unset;
+    transform: scale(.5);
+  }
+
+  .el3 {
+    width: 50px;
+    height: 50px;
+    background-position: -255px;
+    left: 34%;
+    transform: scale(0.5);
+    bottom: 7%;
+    top: 21%;
+  }
+
+  .el4 {
+    width: 50px;
+    height: 50px;
+    background-position: -643px;
+    top: 18%;
+    transform: scale(0.5);
+    right: 11%;
+  }
+
+  .el5 {
+    width: 50px;
+    height: 50px;
+    background-position: -418px;
+    bottom: 23%;
+    right: 2%;
+    transform: scale(0.7);
+  }
+
+  .el6 {
+    width: 90px;
+    height: 93px;
+    background-position: -160px;
+    bottom: 13%;
+    right: 25%;
+  }
+}
+
 .image-sec {
   margin-bottom: 10%;
 
@@ -561,10 +768,109 @@
   }
 }
 
+.scroll-sec2 {
+  padding: 10% 0;
+  position: relative;
+  padding-bottom: 0;
+
+  .back-text {
+    position: absolute;
+    z-index: 1;
+    top: 74px;
+    right: 0;
+    font-family: 'NeueHaasDisplay-bold';
+    z-index: -1;
+
+    h1 {
+      font-size: 7.1em;
+      color: #fafafa;
+    }
+  }
+
+  .container {
+    width: 80%;
+
+    h2 {
+      padding: 20px 0%;
+      font-size: 1.9em;
+      padding-right: 31%;
+      color: #000000;
+      line-height: 1.5;
+      margin-bottom: 3%;
+      letter-spacing: 4px;
+      font-family: 'NeueHaasDisplay-me';
+    }
+
+    p {
+      font-size: 1.3em;
+      font-family: 'Ageo';
+      color: rgb(0, 0, 0);
+      line-height: 1.8;
+      letter-spacing: 2px
+    }
+
+    .bo-h {
+      padding: 20px 0%;
+      font-size: 27px;
+      padding-right: 11%;
+      color: #000000;
+      line-height: 1.8;
+      margin-bottom: 3%;
+      margin-top: 10%;
+      letter-spacing: 4px;
+      font-family: 'NeueHaasDisplay-me';
+      position: relative;
+
+      img {
+        position: absolute;
+        width: 70px;
+        top: 0;
+        right: 0;
+        -webkit-animation: rotation 17s infinite linear;
+      }
+    }
+  }
+
+  .pin-wrap {
+    height: 70vh;
+
+  }
+
+}
+
+.details-f {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  overflow: visible !important;
+
+
+
+
+  .cont {
+    width: 46%;
+    padding-right: 4.6%;
+
+    p {
+      font-size: 0.9em;
+      font-family: 'Ageo';
+      color: #000000;
+      line-height: 1.8;
+      letter-spacing: 2px
+    }
+  }
+}
+
+.image-div {
+  width: 70%;
+  position: relative;
+  margin-top: -18%;
+  margin-left: 36%;
+  margin-bottom: 23%;
+
+}
+
 // 
-// section.horizontal {
-//   overflow-x: hidden;
-// }
 .scroll-sec {
   background: linear-gradient(1deg, #090e26, #031554);
   padding: 10% 0;
@@ -654,20 +960,21 @@ section.horizontal .animation-wrap {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  border-right: 1px solid rgba(0, 0, 0, 0.06);
+  // border-right: 1px solid rgba(0, 0, 0, 0.06);
   background-color: transparent;
 
   h4 {
-    font-size: 1.9em;
+    font-size: 2em;
     text-transform: uppercase;
     font-family: 'NeueHaasDisplay-me';
-    color: #fff;
-    letter-spacing: 2.4px;
+    color: #000000;
+    letter-spacing: 3.6px;
+
   }
 
   p {
     line-height: 1.4;
-    color: #fff;
+    color: rgb(0, 0, 0);
     letter-spacing: 1px;
     margin-top: 9px;
 
@@ -679,12 +986,11 @@ section.horizontal .animation-wrap {
   font-family: 'NeueHaasDisplay-me';
   position: absolute;
   font-size: 10em;
-  opacity: 0.13;
+  opacity: 0.11;
   z-index: -1;
-  transform: translate(-38px,
-      -83px);
+  transform: translate(-60px, -102px);
   line-height: 1;
-  color: #fff;
+  color: rgb(0, 0, 0);
 }
 
 .black-bg {
