--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -610,6 +610,13 @@ button:hover .button-text {
 }
 p {
   font-family: 'Ageo';
+  color: #444444;
+}
+.text-center {
+  text-align: center;
+}
+.text-end {
+  text-align: end;
 }
 body,
 html {
@@ -733,7 +740,6 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
   /* 2 */
@@ -814,7 +820,6 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: sans-serif;
   /* 1 */
   font-size: 100%;
   /* 1 */
@@ -8067,6 +8072,23 @@ header {
 }
 .ser-hero .top-h h1 span {
   display: block;
+  color: transparent;
+  background-image: radial-gradient(farthest-corner at center 0px, grey 0%, black 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-size: 200% auto;
+  -webkit-animation: gradient-animation 3s linear infinite;
+          animation: gradient-animation 3s linear infinite;
+}
+@-webkit-keyframes gradient-animation {
+  to {
+    background-position: 200% center;
+  }
+}
+@keyframes gradient-animation {
+  to {
+    background-position: 200% center;
+  }
 }
 .ser-hero .top-h .h1-r {
   margin-left: 30%;
@@ -8154,6 +8176,13 @@ header {
   font-family: 'NeueHaasDisplay-me';
   text-transform: inherit;
   text-align: justify;
+}
+.ser-c .flex-con .left-d p span {
+  position: absolute;
+  left: -40px;
+}
+.ser-c .flex-con .left-d p span img {
+  width: 35px;
 }
 .ser-c .flex-con .right {
   width: 48%;
@@ -8244,13 +8273,13 @@ header {
   content: '';
   background: url(/assets/resources/img/Service-elements/phone-icon.svg);
   width: 50%;
-  height: 231px;
+  height: 246px;
   position: absolute;
   background-repeat: no-repeat;
   left: 0;
   margin: 0 auto;
   right: 0;
-  top: -100px;
+  top: -120px;
   background-size: cover;
 }
 .last {
@@ -8286,8 +8315,13 @@ header {
   font-size: 1.9em;
   line-height: 1.4;
   letter-spacing: 2px;
+  padding-right: 31%;
   margin-bottom: 20px;
-  font-family: 'NeueHaasDisplay-me';
+  font-family: 'NeueHaasDisplay-roman';
+}
+.service-points .container p {
+  padding-right: 30%;
+  margin-bottom: 3%;
 }
 .service-points .container .point {
   display: -webkit-box;
@@ -8329,56 +8363,237 @@ header {
 }
 .strategy .el1 {
   width: 50px;
-  height: 50px;
-  background-position: -22px;
+  height: 55px;
+  background-position: -31px;
   top: 18%;
   left: 7%;
   -webkit-transform: scale(0.6);
-          transform: scale(0.6);
+  transform: scale(0.6);
 }
 .strategy .el2 {
   width: 50px;
   height: 50px;
-  background-position: -337px;
+  background-position: -438px;
   left: 16%;
-  bottom: 30%;
+  bottom: 14%;
   top: unset;
-  -webkit-transform: scale(0.5);
-          transform: scale(0.5);
 }
 .strategy .el3 {
   width: 50px;
   height: 50px;
-  background-position: -255px;
+  background-position: -175px;
   left: 34%;
   -webkit-transform: scale(0.5);
-          transform: scale(0.5);
+  transform: scale(0.5);
   bottom: 7%;
   top: 21%;
 }
 .strategy .el4 {
   width: 50px;
   height: 50px;
-  background-position: -643px;
+  background-position: -304px;
   top: 18%;
   -webkit-transform: scale(0.5);
-          transform: scale(0.5);
+  transform: scale(0.5);
   right: 11%;
 }
 .strategy .el5 {
   width: 50px;
   height: 50px;
-  background-position: -418px;
+  background-position: -708px;
   bottom: 23%;
   right: 2%;
-  -webkit-transform: scale(0.7);
-          transform: scale(0.7);
+  /* -webkit-transform: scale(0.7); */
+  /* transform: scale(0.7); */
 }
 .strategy .el6 {
   width: 90px;
   height: 93px;
-  background-position: -160px;
-  bottom: 13%;
+  background-position: -530px;
+  bottom: 1%;
+  right: 25%;
+}
+.design {
+  position: relative;
+}
+.design .el-bg {
+  background-image: url(/assets/resources/img/Service-elements/design-icon.png);
+  position: absolute;
+  z-index: 4;
+  background-repeat: no-repeat;
+}
+.design .el1 {
+  width: 50px;
+  height: 55px;
+  background-position: -41px;
+  top: 18%;
+  left: 7%;
+  -webkit-transform: scale(0.6);
+  transform: scale(0.6);
+}
+.design .el2 {
+  width: 60px;
+  height: 60px;
+  background-position: -438px;
+  left: 16%;
+  bottom: 14%;
+  top: unset;
+}
+.design .el3 {
+  width: 60px;
+  height: 60px;
+  background-position: -175px;
+  left: 34%;
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);
+  bottom: 7%;
+  top: 21%;
+}
+.design .el4 {
+  width: 50px;
+  height: 50px;
+  background-position: -304px;
+  top: 18%;
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);
+  right: 11%;
+}
+.design .el5 {
+  width: 60px;
+  height: 60px;
+  background-position: -698px;
+  bottom: 23%;
+  right: 2%;
+  /* -webkit-transform: scale(0.7); */
+  /* transform: scale(0.7); */
+}
+.design .el6 {
+  width: 90px;
+  height: 93px;
+  background-position: -530px;
+  bottom: 1%;
+  right: 25%;
+}
+.digital {
+  position: relative;
+}
+.digital .el-bg {
+  background-image: url(/assets/resources/img/Service-elements/marketing-icon.png);
+  position: absolute;
+  z-index: 4;
+  background-repeat: no-repeat;
+}
+.digital .el1 {
+  width: 50px;
+  height: 55px;
+  background-position: -41px;
+  top: 18%;
+  left: 7%;
+  -webkit-transform: scale(0.6);
+  transform: scale(0.6);
+}
+.digital .el2 {
+  width: 60px;
+  height: 60px;
+  background-position: -438px;
+  left: 13%;
+  bottom: 11%;
+  top: unset;
+}
+.digital .el3 {
+  width: 60px;
+  height: 60px;
+  background-position: -175px;
+  left: 46%;
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);
+  bottom: 8%;
+  top: 29%;
+}
+.digital .el4 {
+  width: 50px;
+  height: 59px;
+  background-position: -310px;
+  top: 29%;
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);
+  right: 6%;
+}
+.digital .el5 {
+  width: 60px;
+  height: 60px;
+  background-position: -698px;
+  bottom: 23%;
+  right: 2%;
+  /* -webkit-transform: scale(0.7); */
+  /* transform: scale(0.7); */
+}
+.digital .el6 {
+  width: 90px;
+  height: 93px;
+  background-position: -553px;
+  bottom: 1%;
+  right: 25%;
+}
+.develop {
+  position: relative;
+}
+.develop .el-bg {
+  background-image: url(/assets/resources/img/Service-elements/development-icon.png);
+  position: absolute;
+  z-index: 4;
+  background-repeat: no-repeat;
+}
+.develop .el1 {
+  width: 50px;
+  height: 55px;
+  background-position: -57px;
+  top: 18%;
+  left: 7%;
+  -webkit-transform: scale(0.6);
+  transform: scale(0.6);
+}
+.develop .el2 {
+  width: 60px;
+  height: 60px;
+  background-position: -438px;
+  left: 13%;
+  bottom: 11%;
+  top: unset;
+}
+.develop .el3 {
+  width: 60px;
+  height: 60px;
+  background-position: -175px;
+  left: 46%;
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);
+  bottom: 8%;
+  top: 23%;
+}
+.develop .el4 {
+  width: 50px;
+  height: 59px;
+  background-position: -310px;
+  top: 29%;
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);
+  right: 6%;
+}
+.develop .el5 {
+  width: 60px;
+  height: 60px;
+  background-position: -698px;
+  bottom: 23%;
+  right: 2%;
+  /* -webkit-transform: scale(0.7); */
+  /* transform: scale(0.7); */
+}
+.develop .el6 {
+  width: 90px;
+  height: 93px;
+  background-position: -553px;
+  bottom: 1%;
   right: 25%;
 }
 .image-sec {
@@ -8424,15 +8639,14 @@ header {
 }
 .scroll-sec2 .back-text {
   position: absolute;
-  z-index: 1;
-  top: 74px;
+  top: -29px;
   right: 0;
   font-family: 'NeueHaasDisplay-bold';
-  z-index: -1;
+  z-index: 0;
 }
 .scroll-sec2 .back-text h1 {
-  font-size: 7.1em;
-  color: #fafafa;
+  font-size: 7.17em;
+  color: #7575750a;
 }
 .scroll-sec2 .container {
   width: 80%;
@@ -8503,7 +8717,7 @@ header {
   position: relative;
   margin-top: -18%;
   margin-left: 36%;
-  margin-bottom: 23%;
+  margin-bottom: 7%;
 }
 .scroll-sec {
   background: linear-gradient(1deg, #090e26, #031554);
@@ -8618,6 +8832,98 @@ section.horizontal .animation-wrap {
 }
 .black-bg img {
   position: absolute;
+}
+.ser-three {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 50px 10vw;
+  position: relative;
+}
+.ser-three .item {
+  position: relative;
+  padding: 70px 70px;
+  width: 30%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  line-height: 1.7;
+  background-color: transparent;
+}
+.ser-three .item::before {
+  content: attr(data-text);
+  font-family: 'NeueHaasDisplay-me';
+  position: absolute;
+  font-size: 5em;
+  opacity: 0.11;
+  z-index: -1;
+  -webkit-transform: translate(-45px, -26px);
+          transform: translate(-45px, -26px);
+  line-height: 1;
+  color: #000000;
+}
+.ser-three .item p {
+  line-height: 1.4;
+  letter-spacing: 1px;
+  margin-top: 9px;
+}
+.ser-two {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 50px 10vw;
+  position: relative;
+}
+.ser-two .mar-top {
+  margin-top: 20%;
+}
+.ser-two .item {
+  position: relative;
+  padding: 60px 60px;
+  width: 40%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  line-height: 1.7;
+  background-color: transparent;
+}
+.ser-two .item::before {
+  content: attr(data-text);
+  font-family: 'NeueHaasDisplay-me';
+  position: absolute;
+  font-size: 10em;
+  opacity: 0.11;
+  z-index: -1;
+  -webkit-transform: translate(-80px, -26px);
+          transform: translate(-80px, -26px);
+  line-height: 1;
+  color: #000000;
+}
+.ser-two .item h2 {
+  font-size: 1.4em;
+  line-height: 1.2;
+  letter-spacing: 1.3px;
+}
+.ser-two .item p {
+  line-height: 1.4;
+  letter-spacing: 1px;
+  margin-top: 9px;
 }
 section.horizontal .animation-wrap.to-right {
   counter-reset: item;
