--- a/assets/resources/styles/less/layout/_global.less
+++ b/assets/resources/styles/less/layout/_global.less
@@ -39,7 +39,15 @@
 
 p {
   font-family: 'Ageo';
-  // font-size: 16px;
+  color: #444444;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-end {
+  text-align: end;
 }
 
 body,
@@ -179,7 +187,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
+
   /* 1 */
   font-size: 1em;
   /* 2 */
@@ -271,7 +279,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: sans-serif;
+
   /* 1 */
   font-size: 100%;
   /* 1 */
