--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -702,7 +702,7 @@
     letter-spacing: 0.1em;
     /* text-transform: uppercase; */
     // font-family: 'NeueHaasDisplay-light';
-    font-family: 'Qartella-Regular';
+    font-family: 'Ageo';
 }
 
 .c-hm-us_title {
@@ -4114,7 +4114,7 @@
         font-synthesis: none;
         letter-spacing: 0.1em;
         /* text-transform: uppercase; */
-        font-family: 'Qartella-Regular';
+        font-family: 'Ageo';
     }
 
     .c-hm-us_title {
