--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -79,7 +79,7 @@
   fill: none;
   width: 35px;
   stroke-width: 6px;
-  stroke: rgb(255, 255, 255);
+  stroke: #2b2b2b;
 }
 
 // @media screen and (min-width:1700px){
@@ -112,11 +112,11 @@
   font-family: 'NeueHaasDisplay-me';
   letter-spacing: 6px;
   -webkit-text-fill-color: transparent;
-  -webkit-text-stroke-color: rgb(255, 255, 255);
-  -webkit-text-stroke: 0.4px;
+  -webkit-text-stroke-color: #2b2b2b;
+  -webkit-text-stroke: 1px;
   padding-left: 52px;
-  stroke: rgb(255, 255, 255);
-  color: #fff;
+  stroke: #2B2B2B;
+  color: #2b2b2b;
 }
 
 .accordion-title h2 span {
@@ -127,11 +127,11 @@
 }
 
 .accordion-list li {
-  border-bottom: 2px solid #ffffff;
+  border-bottom: 2px solid #2b2b2b;
 }
 
 .top-border {
-  border-top: 2px solid #ffffff;
+  border-top: 2px solid #2b2b2b;
 }
 
 .accordion-title {
@@ -150,8 +150,8 @@
 
 
 .accordion-title:hover h2 {
-  -webkit-text-fill-color: rgb(255, 255, 255);
-  -webkit-text-stroke-color: rgb(255, 255, 255);
+  -webkit-text-fill-color: #2b2b2b;
+  -webkit-text-stroke-color: #2b2b2b;
   -webkit-text-stroke: 0px;
 }
 
@@ -159,13 +159,13 @@
   overflow: hidden;
   -webkit-transition: 1s ease-in-out;
   transition: 1s ease-in-out;
-  font-family: 'Qartella-Regular';
+  font-family: 'Ageo';
   font-size: 1.2em;
   padding-right: 17%;
   letter-spacing: 2px;
 
   margin-bottom: 30px;
-  color: #fff;
+  color: #444;
 }
 
 .accordion-list .cont {
@@ -196,7 +196,7 @@
     height: auto;
     margin: 0;
     padding: 0;
-    color: #ffffff;
+    color: #2b2b2b;
     background: 0 0;
     border: 0;
     border-radius: 0;
@@ -217,8 +217,8 @@
 
 .accordion-list li.open h2 {
 
-  -webkit-text-fill-color: rgb(255, 255, 255);
-  -webkit-text-stroke-color: rgb(255, 255, 255);
+  -webkit-text-fill-color: #2b2b2b;
+  -webkit-text-stroke-color: #2b2b2b;
   -webkit-text-stroke: 0px;
 }
 
@@ -265,7 +265,7 @@
   width: 10rem;
   height: 5px;
   left: 0;
-  background: rgb(255, 255, 255);
+  background: #2b2b2b;
   transition: transform calc(var(--duration) * 3) var(--bezier2);
   transform: scaleX(0);
   bottom: -4px;
