--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1558,7 +1558,7 @@ body.dark .ar-work-title,
 
 body.dark .ar-work-cat,
 .a-recent-works.dark .ar-work-cat {
-    color: hsla(0, 0%, 100%, .4)
+    color: rgb(255 255 255 / 20%);
 }
 
 
