--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -694,16 +694,11 @@
 .t-lead {
     margin-top: 0px;
     margin-bottom: 40px;
-    font-size: 2.2em;
-    font-variant: small-caps;
+    font-size: 2em;
     line-height: 1.4;
-    /* font-weight: 400; */
-    text-shadow: 2px 3px 4px #0000003d;
     font-synthesis: none;
-    letter-spacing: 0.1em;
-    /* text-transform: uppercase; */
-    // font-family: 'NeueHaasDisplay-light';
-    font-family: 'Ageo';
+    letter-spacing: 0;
+    font-family: 'Ageo-SemiBold';
 }
 
 .c-hm-us_title {
