--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -244,13 +244,10 @@
                 right: 0;
                 top: 2.5vh;
                 bottom: auto;
-                font-size: 1em;
-                opacity: 0;
+                font-size: 1.1em;
                 line-height: 1.5;
-                font-family: 'NeueHaasDisplay-light';
-                text-transform: uppercase;
                 color: #ffffff;
-                letter-spacing: .37em;
+                letter-spacing: 0.20em;
             }
 
             .chapt-icon {
@@ -802,9 +799,8 @@
                 bottom: auto;
                 font-size: 1.1em;
                 line-height: 1.5;
-                text-transform: uppercase;
                 color: #ffffff;
-                letter-spacing: .37em;
+                letter-spacing: 0.20em;
             }
 
             .chapt-icon {
