--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -575,7 +575,7 @@
     padding-bottom: 2em;
     // border-bottom-left-radius: 2em;
     // border-bottom-right-radius: 2em;
-    background-color: #f2f3f4;
+    background-color: #fff;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     display: none;
@@ -625,7 +625,7 @@
     z-index: 1;
     overflow: hidden;
     border-radius: 0em;
-    background-color: #d8d8d8;
+    // background-color: #d8d8d8;
 }
 
 .o-media.hm-us {
@@ -803,7 +803,7 @@
     z-index: 1;
     overflow: hidden;
     border-radius: 0em;
-    background-color: #d8d8d8;
+    // background-color: #d8d8d8;
 }
 
 .o-media.hm-us {
@@ -4076,7 +4076,7 @@
         z-index: 1;
         overflow: hidden;
         border-radius: 1.25em;
-        background-color: #d8d8d8;
+        // background-color: #d8d8d8;
     }
 
     .o-media {
