--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -246,6 +246,8 @@
                 bottom: auto;
                 font-size: 1.1em;
                 line-height: 1.5;
+                font-weight: normal;
+                font-family: 'Ageo';
                 color: #ffffff;
                 letter-spacing: 0.20em;
             }
@@ -800,6 +802,8 @@
                 font-size: 1.1em;
                 line-height: 1.5;
                 color: #ffffff;
+                font-weight: normal;
+                font-family: 'Ageo';
                 letter-spacing: 0.20em;
             }
 
@@ -1234,6 +1238,14 @@
         }
     }
 
+}
+
+.left-b {
+    border-radius: 20px 0px 0px 20px;
+}
+
+.right-b {
+    border-radius: 0px 20px 20px 0px;
 }
 
 .tablet_font {
