--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -162,9 +162,9 @@
   -webkit-transition: 1s ease-in-out;
   transition: 1s ease-in-out;
   font-family: 'Ageo';
-  font-size: 1.2em;
+  font-size: .8em;
   padding-right: 17%;
-  letter-spacing: 2px;
+  letter-spacing: 0px;
 
   margin-bottom: 30px;
   color: #444;
@@ -177,10 +177,8 @@
   overflow: hidden;
   -webkit-transition: .8s ease-in-out;
   transition: .8s ease-in-out;
-  font-family: 'NeueHaasDisplay-Roman';
-  font-size: 1.5em;
-  padding-right: 3%;
-  letter-spacing: 1px;
+  font-size: 1.3em;
+  padding-left: 4.6%;
 
   .en-form-submit {
     margin: 0 0 0;
@@ -229,7 +227,7 @@
 }
 
 .accordion-list li.open .cont {
-  max-height: 165px;
+  max-height: 335px;
   padding-bottom: 20px;
   transition: 0.4s all ease-in-out;
 }
@@ -1499,7 +1497,8 @@ section.horizontal .animation-wrap.to-left {
 @media screen and (max-width:1280px) {
 
   .works__hero__line {
-    font-size: 10em;
+    font-size: 8em;
+    line-height: 0.8;
   }
 
   .services-s .image {
