--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1508,7 +1508,7 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    margin-left: 220px;
+    margin-left: 40%;
 
 
 }
@@ -1538,11 +1538,11 @@
 }
 
 .ar-work-title {
-    font-size: 45px;
+    font-size: 1.8em;
     font-weight: 700;
-    letter-spacing: -0.05em;
-    padding: 20px 20px 0 20px;
-    color: #191b1d
+    letter-spacing: 0.05em;
+    padding: 10px 0px 0 18px;
+    margin-top: -40px;
 }
 
 body.dark .ar-work-title,
