--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -12963,7 +12963,7 @@ section.horizontal .animation-wrap.to-left {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-left: 220px;
+  margin-left: 40%;
 }
 .ar-work {
   display: block;
@@ -12986,11 +12986,11 @@ section.horizontal .animation-wrap.to-left {
   object-fit: cover;
 }
 .ar-work-title {
-  font-size: 45px;
+  font-size: 1.8em;
   font-weight: 700;
-  letter-spacing: -0.05em;
-  padding: 20px 20px 0 20px;
-  color: #191b1d;
+  letter-spacing: 0.05em;
+  padding: 10px 0px 0 18px;
+  margin-top: -40px;
 }
 body.dark .ar-work-title,
 .a-recent-works.dark .ar-work-title {
