--- a/assets/resources/styles/less/core/_variables.less
+++ b/assets/resources/styles/less/core/_variables.less
@@ -1,22 +1,22 @@
 // VARIABLE DECLARATION
 
-@body_background:#fff;        
+@body_background: #fff;
 @body_font-size: 13px;
 @body_font: @primary_font;
 @body_color : @primary-color;
 
 // COLOR 
 
-@primary-color: #000; 
-@secondary-color: #7d6740; 
+@primary-color: #000;
+@secondary-color: #7d6740;
 @white :#fff;
 @black :#000;
- 
+
 @placeholder-opacity : 100%;
 
 // FONTS
-@primary_font:'Roboto', sans-serif;
-@secondary_font:'Playfair Display', serif;
+@primary_font: '';
+@secondary_font: 'Playfair Display', serif;
 @primary_font-size: 15px;
 @secondary_font-size: 13px;
 
