--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -891,6 +891,8 @@
 .about-us-section h1 {
     width: 100%;
     color: #2b2b2b;
+    font-family: 'NeueHaasDisplay-me';
+    font-size: 3.2em;
 }
 
 .about-us-section .small-h1 {
@@ -997,6 +999,7 @@
             letter-spacing: 1px;
             text-transform: uppercase;
             font-family: 'NeueHaasDisplay-me';
+            overflow: visible;
         }
 
         .parh {
@@ -3340,6 +3343,7 @@
 
 //   media
 @media screen and (max-width:1920px) {
+
     #about2 {
         .big-h h1 {
             font-size: 9.42em;
@@ -3358,9 +3362,14 @@
 
     }
 
+    .about-us-image {
+        width: 900px;
+    }
+
     .about-us-content {
         margin-left: 111px;
-        margin-top: 15%;
+        margin-top: 1%;
+        width: 940px;
     }
 
     .c-hm-us_top {
@@ -3368,8 +3377,12 @@
     }
 
     .c-hm-us_s2 {
-        padding-top: 10em;
-        padding-bottom: 10em;
+        padding-top: 18em;
+        padding-bottom: 18em;
+    }
+
+    .t-lead {
+        font-size: 3em;
     }
 }
 
@@ -3475,8 +3488,8 @@
     }
 
     .about-us-section {
-        padding: 90px 0 30px;
-        margin-bottom: 110px;
+        padding: 15% 0 30px;
+        margin-bottom: 10px;
 
     }
 
@@ -3492,7 +3505,7 @@
     }
 
     .c-hm-us_s2 {
-        padding-top: 12em;
+        padding-top: 7em;
         padding-bottom: 8em;
     }
 
