--- a/assets/resources/styles/less/modules/_header.less
+++ b/assets/resources/styles/less/modules/_header.less
@@ -349,6 +349,7 @@ header {
 	position: relative;
 	overflow: hidden;
 	color: #ffffff;
+	font-family: 'NeueHaasDisplay-me';
 
 }
 
@@ -453,7 +454,7 @@ header {
 }
 
 .navItem:hover .navItemLink {
-	color: transparent;
+	// color: transparent;
 }
 
 @keyframes gradient {
@@ -488,6 +489,7 @@ header {
 	transform-origin: 100% 100%;
 	display: inline-block;
 	color: #fff;
+	font-family: 'NeueHaasDisplay-me';
 }
 
 @media (max-width:1023px) {
@@ -553,7 +555,8 @@ header {
 		height: auto;
 		line-height: 1;
 		opacity: 1;
-		// margin-right: 80px;
+		font-family: 'Ageo';
+		text-transform: capitalize;
 		text-align: left;
 
 		.cb-outro-social-item-title {
@@ -973,7 +976,7 @@ header {
 	}
 
 	.sub-nav {
-		margin-right: 4rem;
+		margin-right: 3rem;
 	}
 
 	.nav-second {
@@ -981,6 +984,7 @@ header {
 		text-align: right;
 		bottom: 0;
 		right: -1rem;
+		font-family: 'Ageo';
 		bottom: 19vh;
 	}
 }
