--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1463,7 +1463,46 @@ section.horizontal .animation-wrap.to-left {
 }
 
 
+.services-s .content-p {
+  padding-right: 0%;
 
+  .en-form-submit {
+    margin: 0 0 0;
+    overflow: hidden;
+    /* height: 100%; */
+    text-align: left;
+    margin-bottom: 20%;
+    margin-top: 30px;
+
+    .en-btn_send {
+      color: #1a1a1a;
+      background: 0 0;
+      border: 0;
+      border-radius: 0;
+      // opacity: 0;
+      outline: 0 !important;
+      font-family: 'Ageo';
+      font-size: 1em;
+      letter-spacing: 1px;
+      line-height: inherit;
+      text-align: inherit;
+      text-transform: inherit;
+      text-indent: inherit;
+      text-decoration: none;
+    }
+  }
+}
+
+@media screen and (max-width:1920px) {
+  .services-s .image {
+    width: 35%;
+
+    /* height: 940px; */
+    img {
+      width: 500px;
+    }
+  }
+}
 
 @media screen and (max-width:1680px) {
   .services-s .image {
@@ -1497,8 +1536,8 @@ section.horizontal .animation-wrap.to-left {
 @media screen and (max-width:1280px) {
 
   .works__hero__line {
-    font-size: 8em;
-    line-height: 0.8;
+    font-size: 11em;
+    line-height: 0.9;
   }
 
   .services-s .image {
