--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1001,6 +1001,7 @@
     background-size: cover;
     clear: both;
     background-position: center;
+    padding-top: 6%;
 
     .wrapper-small {
         width: 100%;
@@ -1543,6 +1544,7 @@
     letter-spacing: 0.05em;
     padding: 10px 0px 0 18px;
     margin-top: -40px;
+    font-family: 'NeueHaasDisplay-me';
 }
 
 body.dark .ar-work-title,
@@ -1551,11 +1553,11 @@ body.dark .ar-work-title,
 }
 
 .ar-work-cat {
-    font-size: 25px;
-    font-weight: 700;
+    font-size: 18px;
     letter-spacing: -0.02em;
     padding-left: 20px;
     color: rgba(25, 27, 29, .6);
+    font-family: 'NeueHaasDisplay-me';
 }
 
 body.dark .ar-work-cat,
@@ -1573,7 +1575,7 @@ body.dark .ar-work-cat,
     font-size: 200px;
     white-space: nowrap;
     font-weight: 700;
-    letter-spacing: -0.06em;
+    font-family: 'NeueHaasDisplay-me';
     color: #191b1d;
     pointer-events: none
 }
